version/0.13/_sources/api/ansys/dpf/core/operators/math/generalized_inner_product_fc/InputsGeneralizedInnerProductFc.rst.txt






:class:`InputsGeneralizedInnerProductFc`
========================================

.. py:class:: ansys.dpf.core.operators.math.generalized_inner_product_fc.InputsGeneralizedInnerProductFc(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   generalized_inner_product_fc operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.math.generalized_inner_product_fc()
   >>> my_field_or_fields_container_A = dpf.Field()
   >>> op.inputs.field_or_fields_container_A.connect(my_field_or_fields_container_A)
   >>> my_field_or_fields_container_B = dpf.Field()
   >>> op.inputs.field_or_fields_container_B.connect(my_field_or_fields_container_B)






.. py:currentmodule:: InputsGeneralizedInnerProductFc

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~field_or_fields_container_A`
            - Allows to connect field_or_fields_container_A input to the operator.
          * - :py:attr:`~field_or_fields_container_B`
            - Allows to connect field_or_fields_container_B input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.math.generalized_inner_product_fc import InputsGeneralizedInnerProductFc

Property detail
---------------

.. py:property:: field_or_fields_container_A
   :type: ansys.dpf.core.inputs.Input


   Allows to connect field_or_fields_container_A input to the operator.

   field or fields container with only one field is expected

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.math.generalized_inner_product_fc()
   >>> op.inputs.field_or_fields_container_A.connect(my_field_or_fields_container_A)
   >>> # or
   >>> op.inputs.field_or_fields_container_A(my_field_or_fields_container_A)

.. py:property:: field_or_fields_container_B
   :type: ansys.dpf.core.inputs.Input


   Allows to connect field_or_fields_container_B input to the operator.

   field or fields container with only one field is expected

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.math.generalized_inner_product_fc()
   >>> op.inputs.field_or_fields_container_B.connect(my_field_or_fields_container_B)
   >>> # or
   >>> op.inputs.field_or_fields_container_B(my_field_or_fields_container_B)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.

   :param inpt:
   :type inpt: str, int, double, bool, list[int], list[float], Field, FieldsContainer, Scoping, Enum,
   :param ScopingsContainer: Input of the operator.
   :type ScopingsContainer: E501
   :param MeshedRegion: Input of the operator.
   :type MeshedRegion: E501
   :param MeshesContainer: Input of the operator.
   :type MeshesContainer: E501
   :param DataSources: Input of the operator.
   :type DataSources: E501
   :param CyclicSupport: Input of the operator.
   :type CyclicSupport: E501
   :param Outputs: Input of the operator.
   :type Outputs: E501
   :param os.PathLike  # noqa: Input of the operator.
   :type os.PathLike  # noqa: E501


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




